--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 </head>
 <body>
   
-  <div class="card">
-    <img src="/images/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-code">
+  <main class="card" role="main">
+    <img src="/lesson_challenges/qr-code-component-main/images/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-code">
     <h1 class="title">
       Improve your front-end skills by building projects
     </h1>
     <p class="directions">
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
-  </div>
+  </main>
 
   
-  <!-- <div class="attribution">
+  <footer class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="">Moonji</a>.
+  </footer>
 </body>
 </html>
