--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   
-  <main class="card" role="main">
+  <main class="card">
     <img src="/lesson_challenges/qr-code-component-main/images/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-code">
     <h1 class="title">
       Improve your front-end skills by building projects
@@ -28,7 +28,7 @@
   </main>
 
   
-  <footer class="attribution" role="contentinfo">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="">Moonji</a>.
   </footer>
