--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   
   <main class="card">
-    <img src="./images/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-code">
+    <img src="/images/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-code">
     <h1 class="title">
       Improve your front-end skills by building projects
     </h1>
